--- a/indexsite.html
+++ b/indexsite.html
@@ -7,7 +7,9 @@
     <title>چرخشکاران ایران زمین</title>
     <link rel="stylesheet" href="styles.css">
 </head>
-<body>
+<body style="
+    width: 513px;
+    height: 923px;">
 
     <!-- Header with business name -->
     <header>
