--- a/indexsite.html
+++ b/indexsite.html
@@ -22,7 +22,7 @@
         <div class="hero-content">
             <!-- Add your picture here -->
             <img src="pic.png" alt="Business Logo" class="hero-image">
-            <h2>چرخشکاران زمین</h2>
+            <h2>چرخشکاران ایران زمین</h2>
         </div>
     </section>
 
