--- a/index.html
+++ b/index.html
@@ -7,9 +7,7 @@
     <title>چرخشکاران ایران زمین</title>
     <link rel="stylesheet" href="styles.css">
 </head>
-<body style="
-    width: 513px;
-    height: 923px;">
+<body>
     
     <!-- Header with business name -->
     <header>
