--- a/index.html
+++ b/index.html
@@ -7,7 +7,13 @@
     <title>چرخشکاران ایران زمین</title>
     <link rel="stylesheet" href="styles.css">
 </head>
-<body>
+<body 
+    @media only screen and (max-width: 400px) {
+     .body {
+        width: 90%;
+        height: 90%;
+    }
+}>
     
     <!-- Header with business name -->
     <header>
