--- a/index.html
+++ b/index.html
@@ -7,13 +7,9 @@
     <title>چرخشکاران ایران زمین</title>
     <link rel="stylesheet" href="styles.css">
 </head>
-<body 
-    @media only screen and (max-width: 400px) {
-     .body {
-        width: 90%;
-        height: 90%;
-    }
-}>
+<body style="
+    width: 513px;
+    height: 923px;">
     
     <!-- Header with business name -->
     <header>
