--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body style="
-    width: 513px;
-    height: 923px;">
+    width: auto
+    height: auto">
     
     <!-- Header with business name -->
     <header>
